# os32

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv
docs/: CNAME  index.html
docs/spotify/: callback.html
fonts/: font_cozette13.c  font_gohu14.c
main/: CMakeLists.txt  Kconfig.projbuild  app.h  app_manager.cpp  app_manager.h  backlight.cpp  backlight.h  captive_portal.cpp  captive_portal.h  captive_portal_html.c  file_server.cpp  file_server.h  idf_component.yml  idle.cpp  idle.h  lcd1602.cpp  lcd1602.h  lv_mem_custom.cpp  main.cpp  menu.cpp  menu.h  os32.h  screenshot.cpp  screenshot.h  sd_manager.cpp  sd_manager.h  spotify_auth.cpp  spotify_auth.h  spotify_client.cpp  spotify_client.h  thumbnail.cpp  thumbnail.h  timezone.cpp  timezone.h  wifi_manager.cpp  wifi_manager.h
main/apps/: app_camera.cpp  app_camera.h  app_files.cpp  app_files.h  app_settings.cpp  app_settings.h  app_spotify.cpp  app_spotify.h  app_sysmon.cpp  app_sysmon.h
main/fonts/: font_gohu11.c  font_gohu14.c  font_gohu14b.c
tools/: compress_html.py
web/: portal.html
